<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.CuentaFragment">

    <!-- Botón para Información de la Cuenta -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/cuentaLblTitulo"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btnInformacionCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_info"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"/>

    <!-- Botón para Restablecer Contraseña, ubicado debajo del otro botón -->
    <Button
        android:id="@+id/btnRestablecerContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rest"
        android:layout_below="@id/btnInformacionCuenta"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>