<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.SesionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="40dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="377dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logoinicio" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regLblInicioSesion"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:textStyle="bold"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp">
            <EditText
                android:id="@+id/logTxtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/logTxtUsuario"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/logTxtContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/logTxtContrasena"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/logBtnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logBtnIngresar"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:textAllCaps="false"
            android:textStyle="bold"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>