<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.ResetPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <!-- Botón tipo ícono para retroceder -->
            <Button
                android:id="@+id/btnVolver2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Volver"/>

            <!-- Título "Restablecer Contraseña" -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Restablecer Contraseña"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"/>
        </LinearLayout>

        <!-- Campos para contraseña -->
        <EditText
            android:id="@+id/txtPassAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtPassAct"
            android:inputType="textPassword"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/txtNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtNewPass"
            android:inputType="textPassword"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/txtConfNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtConfNewPass"
            android:inputType="textPassword"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/btnRestablecer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:layout_marginHorizontal="50dp"
            android:text="@string/btnReset"

            android:backgroundTint="@color/purple_700"
            android:textColor="@android:color/white" />
    </LinearLayout>
</FrameLayout>